--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ click==8.1.3
 colorama==0.4.6
 ghp-import==2.1.0
 idna==3.4
+ipython_genutils==0.2.0
 Jinja2==3.1.2
 Markdown==3.3.7
 MarkupSafe==2.1.2
 mergedeep==1.3.4
 mkdocs==1.4.3
+mkdocs-jupyter==0.24.1
 mkdocs-material==9.1.15
 mkdocs-material-extensions==1.1.1
 packaging==23.1
