--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,8 +103,8 @@ nav:
   - FAQs: others/faq.md
   - Compatibility Table: others/compatibility.md
   - References:
-      - AI Verify Plugins: test.md
+      - AI Verify Plugins: https://imda-btg.github.io/aiverify-developer-tools/stock_plugins/
       - Developer Documentation: https://imda-btg.github.io/aiverify-developer-tools/
-  - Release Notes:
-      - License: test.md
-      - Contact Information: test.md
+  # - Release Notes: TODO
+  #     - License: test.md
+  #     - Contact Information: test.md
