chore(change deployment method)

--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -23,19 +23,27 @@ jobs:
       - name: Checkout docs
         uses: actions/checkout@v3
         with:
-          ssh-key: ${{secrets.DEPLOY_DOCS_KEY}}
+          ssh-key: ${{secrets.DEPLOY_DOCS_DEV_KEY}}
+          ref: docs
 
       # Install dependencies (mkdocs)
-
-      - name: Install mdkdocs
+      - name: Install dependencies
         run: |
-          pip install mkdocs
+          python -m venv env
+          source env/bin/activate
+          pip install -r requirements.txt
+          
+      # Install dependencies (mkdocs)
+      - name: Install dependencies
+        run: |
+          python -m venv env
+          source env/bin/activate
+          pip install -r requirements.txt
 
       - name: Push to gh-pages
         run: |
+          source env/bin/activate
           git config user.name "imda-btg"
           git config user.email "idma-btg@imda.gov.sg"
-          git config pull.rebase true
-          git pull origin gh-pages
 
-          mkdocs gh-deploy --clean
+          mkdocs gh-deploy --clean --force
