--- a/.github/workflows/integration-tests-docker.yml
+++ b/.github/workflows/integration-tests-docker.yml
@@ -3,9 +3,6 @@
 
 name: Integration Tests for aiverify-user (Docker)
 
-env:
-  HOSTNAME: ""
-
 on:
 #  # Runs when a pull request review is being submitted
 #  pull_request_review:
@@ -55,8 +52,7 @@ jobs:
       - name: Run aiverify containers
         working-directory: ${{ github.workspace }}/setup-aiverify
         run: |
-          $HOSTNAME = hostname -I
-          echo $HOSTNAME
+          
           cd aiverify-user
           
           mkdir -m 777 -p ../../uploads/data
@@ -120,12 +116,14 @@ jobs:
           bash regression_run_https.sh &
           
       - name: Run smoke tests
+        env: 
+          HOSTNAME: bash hostname -I
         if: ${{ ! cancelled() }}
         run: |
           cd qa-test/smoke-testing
           npm install
           npx playwright install
-          ENVIRONMENT_URL=https://0.0.0.0:5000 npx playwright test
+          ENVIRONMENT_URL=$HOSTNAME npx playwright test
       
       - name: Run frontend tests
         if: ${{ ! cancelled() }}
