--- a/.github/workflows/integration-tests-docker.yml
+++ b/.github/workflows/integration-tests-docker.yml
@@ -4,15 +4,15 @@
 name: Integration Tests for aiverify-user (Docker)
 
 on:
-#  # Runs when a pull request review is being submitted
-#  pull_request_review:
-#    types: [submitted]
-#    branches:
-#      - 'main'
-#      - 'v0.*'
+ # Runs when a pull request review is being submitted
+ pull_request_review:
+   types: [submitted]
+   branches:
+     - 'main'
+     - 'v0.*'
 
-  # Run this workflow manually from Actions tab
-  workflow_dispatch:
+# Run this workflow manually from Actions tab
+ workflow_dispatch:
     inputs:
       branch_to_test:
         description: 'Branch or tag to run test'
