--- a/.github/workflows/integration-tests-docker.yml
+++ b/.github/workflows/integration-tests-docker.yml
@@ -29,13 +29,12 @@ jobs:
 
   integration-tests-docker:
     #  Run only when PR is approved
-    # if: (github.event_name == 'pull_request_review' && github.event.review.state == 'approved') || github.event_name == 'workflow_dispatch'
+    if: (github.event_name == 'pull_request_review' && github.event.review.state == 'approved') || github.event_name == 'workflow_dispatch'
 
     runs-on: ubuntu-latest
     timeout-minutes: 40
 
     steps:
-
       - name: Checkout code
         uses: actions/checkout@v3
         with:
