--- a/.github/workflows/integration-tests-docker.yml
+++ b/.github/workflows/integration-tests-docker.yml
@@ -114,14 +114,14 @@ jobs:
           pip3 install -r requirements.txt
           bash regression_run_https.sh &
           
-      - name: Run smoke tests
-        if: ${{ ! cancelled() }}
-        run: |
-          echo "$GITHUB_SERVER_URL"
-          cd qa-test/smoke-testing
-          npm install
-          npx playwright install
-          ENVIRONMENT_URL=$GITHUB_SERVER_URL npx playwright test
+      # - name: Run smoke tests
+      #   if: ${{ ! cancelled() }}
+      #   run: |
+      #     echo "$GITHUB_SERVER_URL"
+      #     cd qa-test/smoke-testing
+      #     npm install
+      #     npx playwright install
+      #     ENVIRONMENT_URL=$GITHUB_SERVER_URL npx playwright test
       
       - name: Run frontend tests
         if: ${{ ! cancelled() }}
