--- a/test-engine-core-modules/requirements.txt
+++ b/test-engine-core-modules/requirements.txt
@@ -26,7 +26,7 @@ jmespath==1.0.1 ; python_version >= "3.10" and python_version < "3.12"
 joblib==1.2.0 ; python_version >= "3.10" and python_version < "3.12"
 jsonschema-specifications==2023.7.1 ; python_version >= "3.10" and python_version < "3.12"
 jsonschema==4.18.4 ; python_version >= "3.10" and python_version < "3.12"
-keras==2.12.0 ; python_version >= "3.10" and python_version < "3.12"
+keras==2.14.0 ; python_version >= "3.10" and python_version < "3.12"
 libclang==15.0.6.1 ; python_version >= "3.10" and python_version < "3.12"
 lightgbm==3.3.5 ; python_version >= "3.10" and python_version < "3.12"
 markdown==3.4.4 ; python_version >= "3.10" and python_version < "3.12"
@@ -49,6 +49,7 @@ python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "3.12"
 pytz==2023.3 ; python_version >= "3.10" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.10" and python_version < "3.12"
 referencing==0.30.0 ; python_version >= "3.10" and python_version < "3.12"
+rpy2==3.5 ; python_version >= "3.10" and python_version < "3.12"
 requests-oauthlib==1.3.1 ; python_version >= "3.10" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.10" and python_version < "3.12"
 rfc3339-validator==0.1.4 ; python_version >= "3.10" and python_version < "3.12"
@@ -60,10 +61,10 @@ setuptools==68.0.0 ; python_version >= "3.10" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.10" and python_version < "3.12"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "3.12"
 tensorboard-data-server==0.7.1 ; python_version >= "3.10" and python_version < "3.12"
-tensorboard==2.12.3 ; python_version >= "3.10" and python_version < "3.12"
-tensorflow-estimator==2.12.0 ; python_version >= "3.10" and python_version < "3.12"
+tensorboard==2.14 ; python_version >= "3.10" and python_version < "3.12"
+tensorflow-estimator==2.14.0 ; python_version >= "3.10" and python_version < "3.12"
 tensorflow-io-gcs-filesystem==0.32.0 ; python_version >= "3.10" and python_version < "3.12" and platform_machine != "arm64" or python_version >= "3.10" and python_version < "3.12" and platform_system != "Darwin"
-tensorflow==2.12.0 ; python_version >= "3.10" and python_version < "3.12"
+tensorflow==2.14.0 ; python_version >= "3.10" and python_version < "3.12"
 termcolor==2.3.0 ; python_version >= "3.10" and python_version < "3.12"
 threadpoolctl==3.2.0 ; python_version >= "3.10" and python_version < "3.12"
 typing-extensions==4.7.1 ; python_version >= "3.10" and python_version < "3.12"
