--- a/test-engine-core-modules/pyproject.toml
+++ b/test-engine-core-modules/pyproject.toml
@@ -15,12 +15,14 @@ scikit-learn = "1.2.2"
 setuptools = "68.0.0"
 lightgbm = "3.3.5"
 xgboost = "1.7.4"
-tensorflow = "2.12.0"
 pandas = "1.5.3"
 scipy = "1.11.1"
 httpx = "0.24.1"
 openapi-schema-validator = "0.6.0"
 aiopenapi3 = {git = "https://github.com/commonism/aiopenapi3.git", rev = "8e9591162d1cef8cfc8e7840f34eb20c84af8c24"}
+tensorflow = "2.12.0"
+rpy2 = "^3.5.15"
+test-engine-core = {path = "../test-engine-core/dist/test_engine_core-0.10.0.tar.gz"}
 
 
 [tool.poetry.group.dev.dependencies]
