check locally for dockerfile in the docker-compose

--- a/setup-aiverify/aiverify-user/docker-compose.yml
+++ b/setup-aiverify/aiverify-user/docker-compose.yml
@@ -32,6 +32,9 @@ services:
   # backend - test-engine
   test-engine:
     image: aiverify:0.10
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     depends_on:
       - redis
