--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -35,25 +35,20 @@ jobs:
     - name: Checkout Code (Pull_Request_Review)
       if: github.event_name == 'pull_request_review' || github.event_name == 'workflow_dispatch'
       uses: actions/checkout@v3
-    - name: Black Duck Scan
-      uses: synopsys-sig/synopsys-action@v1.9.0
       with:
-          ### GitHub Checkout
-          ref: ${{ github.event.pull_request.head.ref }}
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          submodules: recursive
-
-          ### SCANNING: Required Fields
-          blackduck_url: https://blackduck.aipo-imda.net/
-          blackduck_token: ${{ secrets.BLACKDUCK_TOKEN }}
-          blackduck_detect_project_name: ai-verify-apigw
-          blackduck_detect_project_version_name: $(date +"%d-%m-%Y")
-          blackduck_detect_detector_search_depth: 10 
-          blackduck_detect_source_path: .
-          blackduck_detect_code_location_name: ai-verify-apigw_$(date + "%d-%m-%Y")
-          blackduck_detect_excluded_directories: /tests 
-          blackduck.detect_trust.cert: true
-          blackduck_detect_policy_check_fail_on_severities: ALL
+       ref: ${{ github.event.pull_request.head.ref }}
+       repository: ${{ github.event.pull_request.head.repo.full_name }}
+       submodules: recursive
+    - name: Black Duck Scan
+      # uses: synopsys-sig/synopsys-action@v1.9.0
+      run: |
+          cd ai-verify-apigw
+          npm install
+          bash (curl -s -L https://detect.synopsys.com/detect9.sh) --blackduck.url=https://blackduck.aipo-imda.net/ --blackduck.api.token=${{ secrets.BLACKDUCK_TOKEN }} --detect.detector.search.depth=10 --detect.project.name=ai-verify-apigw --detect.project.version.name=$(date +"%d-%m-%Y") --detect.source.path=. --detect.code.location.name="ai-verify-apigw_$(date +"%d-%m-%Y")" --detect.excluded.directories=/tests --blackduck.trust.cert=true --detect.policy.check.fail.on.severities=CRITICAL
+          cd ../
+          # ### SCANNING: Required Fields
+          # blackduck_url: https://blackduck.aipo-imda.net/
+          # blackduck_token: ${{ secrets.BLACKDUCK_TOKEN }}
 
     # - name: Install & Scan APIGW
     #   run: |
