--- a/setup-aiverify/aiverify-kube/docker/docker-compose.yml
+++ b/setup-aiverify/aiverify-kube/docker/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     command: redis-server --save 20 1 --loglevel warning --include /etc/redis/redis.conf
     volumes:
        - ./redis-init/redis.conf:/etc/redis/redis.conf
-#      - ./data/redis:/data
-#      - ./logs/redis:/var/log/redis
     networks:
       - app-network
 
@@ -31,7 +29,7 @@ services:
 
   # backend - test-engine
   test-engine:
-    image: aiverify-test-engine:0.10
+    image: aiverify-test-engine:0.10-arm
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: always
@@ -49,7 +47,7 @@ services:
 
   # frontend - portal & apigw
   portal:
-    image: aiverify-portal:0.10
+    image: aiverify-portal:0.10-arm
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
