--- a/setup-aiverify/aiverify-kube/aiverify-test-engine.yml
+++ b/setup-aiverify/aiverify-kube/aiverify-test-engine.yml
@@ -9,8 +9,8 @@ data:
    VALIDATION_SCHEMAS_FOLDER: ./test_engine_app/validation_schemas/
    REDIS_CONSUMER_GROUP: MyGroup
    REDIS_SERVER_HOSTNAME: aiverify-redis-service.dev.svc.cluster.local
-   REDIS_SERVER_PORT: 6379
-   API_SERVER_PORT: 8080
+   REDIS_SERVER_PORT: '6379'
+   API_SERVER_PORT: '8080'
 ---
 apiVersion: v1
 kind: Service
@@ -19,7 +19,7 @@ metadata:
   namespace: dev
 spec:
   ports:
-    - name: aiverify-test-engine-http
+    - name: http
       port: 8080
       protocol: TCP
       targetPort: 8080
@@ -56,11 +56,11 @@ spec:
           type: RuntimeDefault
       containers:
         - name: aiverify-test-engine
-          image: 052567997892.dkr.ecr.ap-southeast-1.amazonaws.com/ecr-aiss-aiverify-test-engine:0.10
+          image: 052567997892.dkr.ecr.ap-southeast-1.amazonaws.com/aiverify-test-engine:0.10
           args:
             - "bash"
             - "-c"
-            - "cp -a aiverify/stock-plugins aiverify/ai-verify-portal/plugins; cd aiverify/test-engine-app; python3 -m test_engine_app"
+            - "cp -a aiverify/stock-plugins/* aiverify/ai-verify-portal/plugins; cd aiverify/test-engine-app; python3 -m test_engine_app"
           envFrom:
           - configMapRef:
               name: aiverify-test-engine-config
